acvus-mir-test/tests/snapshots/all__e2e__comparison_operators.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @a
     3 |   r3 = fetch @b
     4 |   r4 = r2 > r3
     5 |   assign x = r4
     7 |   r5 = ref &x
     8 |   r6 = call #0(r5)
     9 |   r7 = string_concat [T0, r6]
    10 |   commit @a = r2
    11 |   commit @b = r3
    12 |   return r7

    ; r0 (v15) : i64
    ; r1 (v16) : i64
    ; r2 (@a) : i64
    ; r3 (@b) : i64
    ; r4 (v7) : Bool
    ; r5 (x.) : &Bool
    ; r6 (to_string(...)) : String
    ; r7 (v12) : String
    ; r8 (@b) : i64
    ; r9 (v14) : i64
    ; r10 (@b) : i64
    ; r11 (v9) : String
    ; r12 (@a) : i64
    ; r13 (v13) : i64
    ; r14 (@a) : i64
    ; r15 (x) : Bool
