acvus-mir-test/tests/snapshots/all__e2e__context_call_expr.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = context_load @items
     1 |   r1 = call len(r0)
     2 |   r2 = context_call @node { count: r1 }
     3 |   yield r2

    ; r0 (@items) : List<Int>
    ; r1 (len(...)) : Int
    ; r2 (@node) : String
