acvus-mir-test/tests/snapshots/all__e2e__context_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = fetch @user
     1 |   assign @user = r0
     3 |   assign <template> = T0
     4 |   r1 = take @user.name
     5 |   r2 = ref &mut <template>
     6 |   append r2 r1
     7 |   r3 = take <template>
     8 |   r4 = take @user
     9 |   commit @user = r4 (not written)
    10 |   return r3

    ; r0 (@user) : {age: i64, email: String, name: String}
    ; r1 (@user.name) : String
    ; r2 (<template>.) : &mut String
    ; r3 (v7) : String
    ; r4 (v8) : {age: i64, email: String, name: String}
    ; r5 (v3) : String
    ; r6 (@user) : {age: i64, email: String, name: String}
    ; r7 (<template>) : String
