acvus-mir-test/tests/snapshots/all__e2e__context_read.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = fetch @count
     1 |   assign @count = r0
     3 |   assign <template> = T0
     4 |   r1 = ref &@count
     5 |   r2 = call #0(r1)
     6 |   r3 = ref &mut <template>
     7 |   append r3 r2
     8 |   r4 = take <template>
     9 |   r5 = take @count
    10 |   commit @count = r5 (not written)
    11 |   return r4

    ; r0 (@count) : i64
    ; r1 (@count.) : &i64
    ; r2 (to_string(...)) : String
    ; r3 (<template>.) : &mut String
    ; r4 (v8) : String
    ; r5 (v9) : i64
    ; r6 (v3) : String
    ; r7 (@count) : i64
    ; r8 (<template>) : String
