acvus-mir-test/tests/snapshots/all__e2e__error_emit_non_string.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: result.unwrap_err()
---
[infer:test] [0..8] emit requires String, got i64
