acvus-mir-test/tests/snapshots/all__e2e__error_emit_without_a_display_instance.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: result.unwrap_err()
---
[infer:test] [0..12] `{{ }}` has no instance of core::display for Array<i64, 2>
