acvus-mir-test/tests/snapshots/all__e2e__error_tuple_arity_mismatch.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: result.unwrap_err()
---
[infer:test] [1..52] pattern type (_, _, _) incompatible with source type (i64, i64)
