acvus-mir-test/tests/snapshots/all__e2e__error_type_mismatch.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: result.unwrap_err()
---
[infer:test] [10..17] type mismatch in `+`: i64 vs Float
